# cs377_restaurant_scheduling_simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: color.h  customer.h  fifo.h  lottery.h  metrics.h  mlfq.h  priority_queues.h  rr.h  scheduling.h  scheduling_policy.h  sjf.h  stcf.h
src/: fifo.cpp  lottery.cpp  main.cpp  main_scheduling.cpp  mlfq.cpp  rr.cpp  scheduling.cpp  scheduling.h  scheduling_policy.cpp  sjf.cpp  stcf.cpp
tests/: homework_tests.cpp  test.cpp
workloads/: workload_01.txt  workload_02.txt  workload_03.txt  workload_04.txt  workload_05.txt  workload_06.txt  workload_07.txt  workload_08.txt
